# HUMAN-DETECTION

./: .travis.yml  CMakeLists.txt  Doxyfile  License  readme.md
DOXYGEN/html/: CMakeLists_8txt.html  CppCheck_8txt.html  CppLint_8txt.html  _8ycm__extra__conf_8py.html  annotated.html  app_2CMakeLists_8txt.html  app_2main_8cpp.html  app_2main_8cpp__incl.map  app_2main_8cpp__incl.md5  classData-members.html  classData.html  classDetect-members.html  classDetect.html  classTrain-members.html  classTrain.html  classes.html  crop001001_8txt.html  crop001002_8txt.html  crop001003_8txt.html  crop001004_8txt.html  crop001005_8txt.html  crop001010_8txt.html  crop001014_8txt.html  crop001015_8txt.html  crop001106_8txt.html  crop001231_8txt.html  crop001501_8txt.html  crop001504_8txt.html  crop001511_8txt.html  crop001512_8txt.html  crop001524_8txt.html  crop001554_8txt.html  crop001628_8txt.html  data_8cpp.html  data_8cpp__incl.map  data_8cpp__incl.md5  data_8hpp.html  data_8hpp__dep__incl.map  data_8hpp__dep__incl.md5  data_8hpp__incl.map  (+52 more)
DOXYGEN/latex/: CppCheck_8txt.tex  CppLint_8txt.tex  _8ycm__extra__conf_8py.tex  annotated.tex  app_2CMakeLists_8txt.tex  app_2main_8cpp.tex  app_2main_8cpp__incl.md5  classData.tex  classDetect.tex  classTrain.tex  crop001001_8txt.tex  (+49 more)
Results/: CppCheck.txt  CppLint.txt
app/: CMakeLists.txt  data.cpp  detect.cpp  main.cpp  train.cpp
docs/: config  config.bak
include/: MockData.hpp  data.hpp  detect.hpp  lib.hpp  train.hpp
test/: CMakeLists.txt  main.cpp  test.cpp  testData.cpp  testdata.cpp  testdetect.cpp  testtrain.cpp
(+111 files in other folders)
